--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,30 @@
 :root {
   --font-main: "Inter", sans-serif;
+  --transition: ease-out;
   --white: #fff;
+  --blue: #071de0;
+  --gray: #939eac;
   --main-background: #06071b;
+  --gradient1: linear-gradient(
+    318deg,
+    rgba(0, 197, 235, 0.5) 0%,
+    rgba(181, 68, 254, 0.5) 100%
+  );
+  --gradient2: linear-gradient(
+    115deg,
+    rgba(0, 197, 235, 0.5) 0%,
+    rgba(181, 68, 254, 0.5) 100%
+  );
+  --gradient3: linear-gradient(
+    115deg,
+    rgba(0, 197, 235, 0.5) 0%,
+    rgba(181, 68, 254, 0.5) 100%
+  );
+  --gradient4: linear-gradient(
+    319deg,
+    rgba(0, 197, 235, 0.5) 0%,
+    rgba(181, 68, 254, 0.5) 100%
+  );
 }
 
 @font-face {
@@ -74,13 +97,21 @@ body {
   z-index: 1;
 }
 
-.notPage{
+.notPage {
   padding-top: 200px;
   padding-bottom: 200px;
 }
 
-.notFoundText{
-font-weight: 700;
-font-size: 40px;
-text-align: center;
+.notFoundText {
+  font-weight: 700;
+  font-size: 40px;
+  text-align: center;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active{
+  background-color: var(--main-background);
+}
+
+html {
+  scroll-behavior: smooth;
 }
