--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,29 +1,49 @@
-.headerPage{
-    background: linear-gradient(99deg, rgba(0, 197, 235, 0.3) 0%, rgba(181, 68, 254, 0.3) 100%);
-    position: absolute;
-    top: 20px;
-    left: 0;
-    width: 100%;
-    z-index: 2;
-    background-color: var(--main-background);
-    backdrop-filter: blur(35px);
+.headerPage {
+  background: linear-gradient(
+    99deg,
+    rgba(0, 197, 235, 0.3) 0%,
+    rgba(181, 68, 254, 0.3) 100%
+  );
+  position: absolute;
+  top: 20px;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  background-color: linear-gradient(
+    99deg,
+    rgba(0, 197, 235, 0.3) 0%,
+    rgba(181, 68, 254, 0.3) 100%
+  );
+  backdrop-filter: blur(35px);
 }
 
-.icon{
-    stroke: var(--white);
+.icon {
+  stroke: var(--white);
 }
 
-.button{
-    background-color: transparent;
+.button {
+  background-color: transparent;
 }
 
-@media screen and (min-width:768px) {
-    .button{
-        display: none;
-    }
-    
+.headerContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 14px;
+  padding-bottom: 14px;
 }
 
-@media screen and(min-width:768px) {
-    
+@media screen and (min-width: 768px) {
+  .headerContainer {
+    padding-top: 14px;
+    padding-bottom: 14px;
+  }
+}
+
+@media screen and(min-width:1280px) {
+  .headerContainer {
+    padding-top: 19px;
+    padding-bottom: 19px;
+  }
 }
