--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,6 +1,3 @@
-.navlink {
-}
-
 .link {
   font-weight: 500;
   font-size: 32px;
@@ -8,7 +5,6 @@
   color: #fcfcfc;
   text-decoration: none;
   font-style: normal;
-  display: none;
 }
 
 .active {
@@ -16,19 +12,19 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  text-decoration: underline;
 }
 
 @media screen and (min-width: 768px) {
-  .navlink {
+  .list {
     display: flex;
     flex-direction: row;
     gap: 40px;
   }
 
   .link {
-    display: block;
+    font-family: var(--font);
     font-weight: 400;
     font-size: 12px;
+    text-align: center;
   }
 }
