--- a/src/components/SectionFeatures/SectionFeatures.module.css
+++ b/src/components/SectionFeatures/SectionFeatures.module.css
@@ -1,5 +1,5 @@
 .featuresPage {
-  background-image: url("../../assets/images/2-min.png");
+  background-image: url('../../assets/images/2-min.png');
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 40px;
@@ -34,11 +34,6 @@
   max-width: 100%;
 }
 
-.imgItem,
-.desktopItem {
-  display: none;
-}
-
 .mobileImg {
   margin-bottom: 44px;
 }
@@ -47,7 +42,7 @@
   (-webkit-min-device-pixel-ratio: 2),
   (min-resolution: 2dppx) {
   .featuresPage {
-    background-image: url("../../assets/images/2@2x-min.png");
+    background-image: url('../../assets/images/2@2x-min.png');
   }
 }
 
@@ -68,11 +63,7 @@
   }
 
   .mobileImg {
-    display: none;
-  }
-
-  .imgItem {
-    display: block;
+    margin-bottom: 0;
   }
 
   .listFirst {
@@ -92,6 +83,15 @@
 @media screen and (min-width: 1280px) {
   .featuresPage {
     padding-bottom: 100px;
+    background-image: url('../../assets/images/features_2_D.png'),
+      url('../../assets/images/features_D.png');
+    background-position: 1% 19%, 102% -23%;
+    background-size: 1500px 1280px, 1200px 600px;
+  }
+
+  .featuresContainer {
+    padding-left: 155px;
+    padding-right: 155px;
   }
 
   .title {
@@ -114,12 +114,7 @@
     font-size: 14px;
   }
 
-  .imgItem {
-    display: none;
-  }
-
   .desktopItem {
-    display: block;
     width: 396px;
   }
 
@@ -127,52 +122,40 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 54px 27px;
     grid-template-areas:
-      "item3 item2 item6"
-      "item4 item2 item7"
-      "item5 item2 item8";
+      'item3 item2 item6'
+      'item4 item2 item7'
+      'item5 item2 item8';
     align-items: start;
   }
 
   .item2 {
     grid-area: item2;
   }
-  .item3,
-  .item4,
-  .item5 {
-    grid-column: 1;
-  }
 
   .item3 {
+    grid-area: item3;
     padding-top: 44px;
   }
 
-  .item6 {
-    padding-top: 44px;
+  .item4 {
+    grid-area: item4;
   }
 
-  .item6,
-  .item7,
-  .item8 {
-    grid-column: 3;
+  .item5 {
+    grid-area: item5;
   }
+
   .item6 {
-    grid-row: 1;
+    grid-area: item6;
+    padding-top: 44px;
   }
 
   .item7 {
-    grid-row: 2;
+    grid-area: item7;
   }
 
-  .descrBox.a,
-  .descrBox.b,
-  .descrBox.c {
-    width: 220px;
-  }
-
-  .descrBox.d,
-  .descrBox.e,
-  .descrBox.f {
-    width: 225px;
+  .item8 {
+    grid-area: item8;
   }
 
   .listItem {
