--- a/src/components/SectionWatch/SectionWatch.module.css
+++ b/src/components/SectionWatch/SectionWatch.module.css
@@ -2,7 +2,7 @@
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: var(--main-background);
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   color: var(--white);
 }
 
@@ -106,17 +106,14 @@
   }
 }
 
-@media screen and (min-width: 1240px) {
-  .descrContainer {
-  }
-
+@media screen and (min-width: 1280px) {
   .watchContainer {
     flex-direction: row;
-    gap: 161px;
+    justify-content: space-between;
   }
 
   .descrContainer {
-    gap: 0;
+    align-items: start;
   }
 
   .title {
@@ -125,10 +122,15 @@
 
   .text {
     margin-bottom: 40px;
+    text-align: left;
   }
 
   .decor {
-    top: -17%;
+    top: -6%;
     left: 61%;
+  }
+
+  .image {
+    width: 501px;
   }
 }
